added about section

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <title>Recruiting System & Applicant Software</title>
+    <title>Recruiting Stacey</title>
   </head>
   <body>
     <header class="header">
@@ -15,13 +15,13 @@
             <a href="javascript:void(0)" class="dropbtn">Home</a>
               <ul class="dropdown-content">
                 <li><a href="#">Fun hover effect!</a></li>
-                <li><a href="#">But, these </a></li>
-                <li><a href="#">Don't Actually</a></li>
+                <li><a href="#">But, these links </a></li>
+                <li><a href="#">Don't actually</a></li>
                 <li><a href="#">Lead anywhere</a></li>
               </ul>
           </li>
-          <li class="nav-list__item"><a href="#intro">About</a></li>
-          <li class="nav-list__item"><a href="#intro">Reviews</a></li>
+          <li class="nav-list__item"><a href="#main-about">About</a></li>
+          <li class="nav-list__item"><a href="#main-reviews">Reviews</a></li>
         </ul>
         <button class="primary_btn"type="button" name="button">Request To Chat</button>
       </nav>
@@ -37,12 +37,32 @@
         <div class="main-header__bg"></div>
       </div>
 
-      <div class="second">
-        HI
+      <div class="main-about" id="main-about">
+        <div class="main-about__content">
+          <h2 class="main-about__content-header">Getting Started with Stacey: What She's About</h2>
+          <div class="main-about__content-list">
+            <div class="main-about__content-list-item">
+                <h3>Coding</h3>
+                <p>JavaScript, HTML, CSS, Ruby - and this is only just the beginning! Passionate about coding, I'm always looking for new opportunities to become better at my craft. I'm genuinley excited to see myself grow and succeed as a developer!</p>
+            </div>
+            <div class="main-about__content-list-item">
+                <h3>Communication</h3>
+                <p>Having studied Mandarin to such a high level of proficiency, I've learned how to effectively communicate in many situations. Whether it's trying to describe a mystery fruit to a vendor, or telling a non-speaker about a quirky phrase, the clear and concise communication techniques I've adopted easily carry over into the coding world!</p>
+            </div>
+            <div class="main-about__content-list-item">
+                <h3>Collaboration</h3>
+                <p>After several pair programming projects, I've grown to love working with new people. Everyone has something to bring to the table, whether it be strengths or weaknesses. By doing and collaborating, we can only improve our future ventures by implementing not only what we take away from others, but also what we learn from ourselves.</p>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="third">
-        WELCOME
+
+      <div class="main-reviews" id="main-reviews">
+        <h2>Don't take my word for it, see what people are saying!</h2>
+
+        “Stacey could barely lift a rug when I met her and burnt boiling water; now she lifts rugs effortlessly and cooks with aplomb. Her website building skills have similarly increased."
       </div>
+
     </main>
     <footer>
       footer
