added one review and media links

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
     </header>
     <main>
 
+
+
       <div class="main-header">
         <div class="main-header__content">
           <h1 class="main-header__content-hero-header">Make Stacey your competitve advantage</h1>
@@ -57,10 +59,32 @@
         </div>
       </div>
 
+        <hr>
+
       <div class="main-reviews" id="main-reviews">
         <h2>Don't take my word for it, see what people are saying!</h2>
+        <p>“Stacey could barely lift a rug when I met her and burnt boiling water; now she lifts rugs effortlessly and cooks with aplomb. Her website building skills have similarly increased." </p>
+        <span>- My neighbor freshman year of college, now at Harvard Law</span>
+      </div>
 
-        “Stacey could barely lift a rug when I met her and burnt boiling water; now she lifts rugs effortlessly and cooks with aplomb. Her website building skills have similarly increased."
+      <div class="main-last">
+          <h2>Ready to grow your company with Stacey?</h2>
+          <h2>Ready for Stacey to grow with your company?</h2>
+          <div class="media-icons">
+
+            <a href="https://www.linkedin.com/in/staceymarks/">
+              <svg class="linkedin-logo">
+                <use xlink:href="img/sprite.svg#icon-linkedin-with-circle"></use>
+              </svg>
+            </a>
+
+            <a href="https://github.com/smarks8">
+              <svg class="github-logo">
+                <use xlink:href="img/sprite.svg#icon-github-with-circle"></use>
+              </svg>
+            </a>
+
+          </div>
       </div>
 
     </main>
