fixed media spacing

--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
                 <li><a href="#">Fun hover effect!</a></li>
                 <li><a href="#">But, these links </a></li>
                 <li><a href="#">Don't actually</a></li>
-                <li><a href="#">Lead anywhere</a></li>
+                <li><a href="#">Lead anywhere fun</a></li>
               </ul>
           </li>
           <li class="nav-list__item"><a href="#main-about">About</a></li>
           <li class="nav-list__item"><a href="#main-reviews">Reviews</a></li>
         </ul>
-        <button class="primary_btn"type="button" name="button">Request To Chat</button>
+        <a class="primary_btn" href="#main-last">Find On Social!</a>
+
       </nav>
     </header>
     <main>
@@ -34,7 +35,7 @@
         <div class="main-header__content">
           <h1 class="main-header__content-hero-header">Make Stacey your competitve advantage</h1>
           <h2 class="main-header__content-hero-subheader">Lore ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h2>
-          <button class="main-header__content-button"type="button" name="button">Request To Chat</button>
+          <a class="main-header__content-button" href="#main-last">Find On Social!</a>
         </div>
         <div class="main-header__bg"></div>
       </div>
@@ -67,18 +68,18 @@
         <span>- My neighbor freshman year of college, now at Harvard Law</span>
       </div>
 
-      <div class="main-last">
+      <div class="main-last" id="main-last">
           <h2>Ready to grow your company with Stacey?</h2>
           <h2>Ready for Stacey to grow with your company?</h2>
           <div class="media-icons">
 
-            <a href="https://www.linkedin.com/in/staceymarks/">
+            <a href="https://www.linkedin.com/in/staceymarks/" target="_blank">
               <svg class="linkedin-logo">
                 <use xlink:href="img/sprite.svg#icon-linkedin-with-circle"></use>
               </svg>
             </a>
 
-            <a href="https://github.com/smarks8">
+            <a href="https://github.com/smarks8" target="_blank">
               <svg class="github-logo">
                 <use xlink:href="img/sprite.svg#icon-github-with-circle"></use>
               </svg>
