fix spacing and started on media queries

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <title>Recruiting Stacey</title>
@@ -50,7 +51,7 @@
             </div>
             <div class="main-about__content-list-item">
                 <h3>Communication</h3>
-                <p>Having studied Mandarin to such a high level of proficiency, I've learned how to effectively communicate in many situations. Whether it's trying to describe a mystery fruit to a vendor, or telling a non-speaker about a quirky phrase, the clear and concise communication techniques I've adopted easily carry over into the coding world!</p>
+                <p>Having studied Mandarin to such a high level of proficiency, I've learned how to effectively communicate in a myriad of situations. Whether it's trying to describe a mystery fruit to a vendor, or telling a non-speaker about a quirky phrase, the clear and concise communication techniques I've adopted easily carry over into the coding world!</p>
             </div>
             <div class="main-about__content-list-item">
                 <h3>Collaboration</h3>
