--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="main-header">
         <div class="main-header__content">
           <h1 class="main-header__content-hero-header">Make Stacey your competitve advantage</h1>
-          <h2 class="main-header__content-hero-subheader">Lore ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h2>
+          <h2 class="main-header__content-hero-subheader">She's looking for a company that's like a greenhouse - an environment where she can thrive and transform as a developer, as well as give back to the community! Symbiosis! Bringing pristine ECMAScript 6 & positive energy, always.</h2>
           <a class="main-header__content-button" href="#main-last">Find On Social!</a>
         </div>
         <div class="main-header__bg"></div>
@@ -47,7 +47,7 @@
           <div class="main-about__content-list">
             <div class="main-about__content-list-item">
                 <h3>Coding</h3>
-                <p>JavaScript, HTML, CSS, Ruby - and this is only just the beginning! Passionate about coding, I'm always looking for new opportunities to become better at my craft. I'm genuinley excited to see myself grow and succeed as a developer!</p>
+                <p>JavaScript, HTML, CSS, Ruby - and this is only just the beginning! Passionate about coding, I'm always looking for new opportunities to become better at my craft. I'm genuinley excited to see myself grow and succeed as a developer! </br></br> *Has a particular soft spot for front-end development</p>
             </div>
             <div class="main-about__content-list-item">
                 <h3>Communication</h3>
@@ -55,7 +55,7 @@
             </div>
             <div class="main-about__content-list-item">
                 <h3>Collaboration</h3>
-                <p>After several pair programming projects, I've grown to love working with new people. Everyone has something to bring to the table, whether it be strengths or weaknesses. By doing and collaborating, we can only improve our future ventures by implementing not only what we take away from others, but also what we learn from ourselves.</p>
+                <p>After several pair programming projects, I've grown to love working with new people. Everyone has something to bring to the table, both strengths and weaknesses. By doing and collaborating, we can only improve our future ventures by implementing not only what we take away from others, but also what we learn from ourselves.</p>
             </div>
           </div>
         </div>
