Add padding to section titles

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
       <div class="main-about" id="main-about">
         <div class="main-about__content">
-          <h2 class="main-about__content-header">Getting Started with Stacey: What She's About</h2>
+          <h2 class="section-title main-about__content-header">Getting Started with Stacey: What She's About</h2>
           <div class="main-about__content-list">
             <div class="main-about__content-list-item">
                 <h3>Coding</h3>
@@ -64,7 +64,7 @@
         <hr>
 
       <div class="main-reviews" id="main-reviews">
-        <h2>Don't take my word for it, see what people are saying!</h2>
+        <h2 class="section-title">Don't take my word for it, see what people are saying!</h2>
         <p>“Stacey could barely lift a rug when I met her and burnt boiling water; now she lifts rugs effortlessly and cooks with aplomb. Her website building skills have similarly increased." </p>
         <span>- My neighbor freshman year of college, now at Harvard Law</span>
       </div>
