--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <title>Recruiting Stacey</title>
   </head>
   <body>
@@ -93,5 +94,6 @@
     <footer>
       footer
     </footer>
+    <script type="text/javascript" src="index.js"></script>
   </body>
 </html>
