sitewide minor bug fixes

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href="#" class="logo-link">blueabode</a>
         <ul class="nav-list">
           <li class="nav-list__item-dropdown">
-            <a href="javascript:void(0)" class="dropbtn">Home</a>
+            <a href="#" class="dropbtn">Home</a>
               <ul class="dropdown-content">
                 <li><a href="#">Fun hover effect!</a></li>
                 <li><a href="#">But, these links </a></li>
@@ -36,7 +36,7 @@
       <div class="main-header">
         <div class="main-header__content">
           <h1 class="main-header__content-hero-header">Make Stacey your competitve advantage</h1>
-          <h2 class="main-header__content-hero-subheader">She's looking for a company that's like a greenhouse - an environment where she can thrive and transform as a developer, as well as give back to the community! Symbiosis! Bringing pristine ECMAScript 6 & positive energy, always.</h2>
+          <h2 class="main-header__content-hero-subheader">She's looking for a company that's like a greenhouse - an environment where she can thrive and transform as a developer, as well as give back to the community! Symbiosis! Bringing pristine ES6 & positive energy, always.</h2>
           <a class="main-header__content-button" href="#main-last">Find On Social!</a>
         </div>
         <div class="main-header__bg"></div>
